--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	
-	<div class="container-fluid">
+	<div class="container">
 		<header class="row bg-success text-white py-4">
 			<div class="col-12">
 				<h1 class="mb-2">Header</h1>
@@ -63,3 +63,4 @@
 	<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
